--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-minimal
-title: koskinev's homepage
-description: Under construction!
+theme: jekyll-theme-midnight
+title: koskinev's notes
+description: Notes about programming
