--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,11 @@ github_username:  koskinev
 remote_theme: jekyll/minima
 minima: 
   skin: auto
+markdown: kramdown
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
 incremental: false
 highlighter: rouge
 gist:
   noscript: false
-kramdown:
-  math_engine: mathjax
-  syntax_highlighter: rouge
