--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 domain: koskinev.github.io
 url: https://koskinev.github.io
-title: Aimless Programming
+title: Joy of NIH
 description: >- # ignore newlines
-  Writings about weekend programming projects
+  Writings about reinventing stuff
 github_username:  koskinev
 
 # Build settings
