--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 domain: koskinev.github.io
 url: https://koskinev.github.io
-title: Joy of NIH
+title: Joy of NIH (the syndrome)
 description: >- # ignore newlines
   Writings about reinventing stuff
 github_username:  koskinev
